--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "fun",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js"
   },
@@ -33,7 +34,8 @@
     "pug": "^3.0.0",
     "slugify": "^1.4.0",
     "validator": "^13.0.0",
-    "xss-clean": "^0.1.1"
+    "xss-clean": "^0.1.1",
+    "compression": "^1.7.4"
   },
   "engines": {
     "node": ">=11.0.0"
