--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "slugify": "^1.4.0",
     "validator": "^13.0.0",
     "xss-clean": "^0.1.1",
-    "compression": "^1.7.4"
+    "compression": "^1.7.4",
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": "^11"
